[project] try correct popup on mobile

--- a/css/projects.css
+++ b/css/projects.css
@@ -48,25 +48,17 @@ section{
 	left: 50%;
 	width: 90vw;
 	height: 90vh;
-	max-width: 90vw;
-	max-height: 90vh;
 	transform: translate(-50%, -50%);
 	z-index: 9999 !important;
-
 	background: rgb(255, 255, 255);
 	overflow-y: auto;
-
-	padding-top: env(safe-area-inset-top);
-	padding-bottom: env(safe-area-inset-bottom);
-	padding-left: env(safe-area-inset-left);
-	padding-right: env(safe-area-inset-right);
-
+	padding: 1.5rem;
 	border-radius: 12px;
-	box-shadow: 0 0 15px rgba(0,0,0,0.5);
-
+	box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
 	transform-style: preserve-3d;
 	backface-visibility: hidden;
 	will-change: transform;
+	transform: translateZ(0);
 }
 
 .popup, .overlay {
